// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmpSocialEmbed should render correctly 1`] = `
<div>
  <a
    href="#skip-%p-post-by-%u"
  >
    Skip %p post by %u
  </a>
  <h1>
    01234
  </h1>
  <p
    id="skip-%p-post-by-%u"
  >
    End of %p post by %u
  </p>
</div>
`;

exports[`CanonicalSocialEmbed should render correctly 1`] = `
<div>
  <a
    href="#skip-%p-post-by-%u"
  >
    Skip %p post by %u
  </a>
  <div>
    <h1>
      Content.
    </h1>
  </div>
  <p
    id="skip-%p-post-by-%u"
  >
    End of %p post by %u
  </p>
</div>
`;
